Don't merge threads on same line left/right
Goes along with c/95273/. Adds commentSide attribute to comments to see
which side of the diff view they belong on. This is also used as part
of the locationRange for the gr-diff-comment-thread-group, so that two
thread groups can be on the same line or range for the unified group (
one for the right, one for the left).

Note: there is already a 'side' attribute on the gr-diff-comment, which
is confusing. This side actually references 'PARENT' or 'REVISION', to
identify whether the comment belongs to the parent or any revision. On
diffs where two revisions are compared to each other, this cannot be
used to determine left/right. However, because 'side' is part of
the CommentInfo entity[1], it is difficult to change the name and make
more sense out of that.

[1] https://gerrit-review.googlesource.com/Documentation/rest-api-changes.html#comment-info

Bug: Issue 5114
Change-Id: I5cc4c17d4bb134e31e5cc07ff9b08ed349488c97

--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group_test.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group_test.html
@@ -54,26 +54,31 @@ limitations under the License.
           id: 'sallys_confession',
           message: 'i like you, jack',
           updated: '2015-12-23 15:00:20.396000000',
+          __commentSide: 'left',
         }, {
           id: 'jacks_reply',
           message: 'i like you, too',
           updated: '2015-12-24 15:00:20.396000000',
+          __commentSide: 'left',
         },
       ];
 
       var expectedThreadGroups = [
         {
           start_datetime: '2015-12-23 15:00:20.396000000',
+          commentSide: 'left',
           comments: [{
               id: 'sallys_confession',
               message: 'i like you, jack',
               updated: '2015-12-23 15:00:20.396000000',
+              __commentSide: 'left',
             }, {
               id: 'jacks_reply',
               message: 'i like you, too',
               updated: '2015-12-24 15:00:20.396000000',
+              __commentSide: 'left',
             }],
-          locationRange: 'line',
+          locationRange: 'line-left',
         },
       ];
 
@@ -89,25 +94,30 @@ limitations under the License.
             start_character: 1,
             end_line: 1,
             end_character: 2,
-          }
+          },
+          __commentSide: 'left',
         });
 
       expectedThreadGroups = [
         {
           start_datetime: '2015-12-23 15:00:20.396000000',
+          commentSide: 'left',
           comments: [{
               id: 'sallys_confession',
               message: 'i like you, jack',
               updated: '2015-12-23 15:00:20.396000000',
+              __commentSide: 'left',
             }, {
               id: 'jacks_reply',
               message: 'i like you, too',
               updated: '2015-12-24 15:00:20.396000000',
+              __commentSide: 'left',
             }],
-          locationRange: 'line',
+          locationRange: 'line-left',
         },
         {
           start_datetime: '2015-12-24 15:00:10.396000000',
+          commentSide: 'left',
           comments: [{
             id: 'betsys_confession',
             message: 'i like you, jack',
@@ -118,8 +128,9 @@ limitations under the License.
               end_line: 1,
               end_character: 2,
             },
+            __commentSide: 'left',
           }],
-          locationRange: 'range-1-1-1-2',
+          locationRange: 'range-1-1-1-2-left',
         },
       ];
 
@@ -157,13 +168,15 @@ limitations under the License.
     });
 
     test('_calculateLocationRange', function() {
+      var comment = {__commentSide: 'left'};
       var range = {
         start_line: 1,
         start_character: 2,
         end_line: 3,
         end_character: 4,
       };
-      assert.equal(element._calculateLocationRange(range), 'range-1-2-3-4');
+      assert.equal(
+        element._calculateLocationRange(range, comment), 'range-1-2-3-4-left');
     });
 
     test('thread groups are updated when comments change', function() {
