Don't merge threads on same line left/right
Goes along with c/95273/. Adds commentSide attribute to comments to see
which side of the diff view they belong on. This is also used as part
of the locationRange for the gr-diff-comment-thread-group, so that two
thread groups can be on the same line or range for the unified group (
one for the right, one for the left).

Note: there is already a 'side' attribute on the gr-diff-comment, which
is confusing. This side actually references 'PARENT' or 'REVISION', to
identify whether the comment belongs to the parent or any revision. On
diffs where two revisions are compared to each other, this cannot be
used to determine left/right. However, because 'side' is part of
the CommentInfo entity[1], it is difficult to change the name and make
more sense out of that.

[1] https://gerrit-review.googlesource.com/Documentation/rest-api-changes.html#comment-info

Bug: Issue 5114
Change-Id: I5cc4c17d4bb134e31e5cc07ff9b08ed349488c97

--- a/polygerrit-ui/app/elements/diff/gr-diff/gr-diff_test.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff/gr-diff_test.html
@@ -218,7 +218,8 @@ limitations under the License.
 
       test('thread groups', function() {
         var contentEl = document.createElement('div');
-        var rangeToCheck = 'line';
+        var rangeToCheck = 'line-left';
+        var commentSide = 'left';
         var patchNum = 1;
         var side = 'PARENT';
         var range = {
@@ -227,6 +228,10 @@ limitations under the License.
           endLine: 1,
           endChar: 2,
         };
+
+        element.changeNum = 123;
+        element.patchRange = {basePatchNum: 1, patchNum: 2};
+        element.path = 'file.txt';
 
         sandbox.stub(element.$.diffBuilder, 'createCommentThreadGroup',
             function() {
@@ -237,8 +242,8 @@ limitations under the License.
         assert.isNotOk(element._getThreadGroupForLine(contentEl));
 
         // A thread group gets created.
-        assert.isOk(
-            element._getOrCreateThreadAtLineRange(contentEl, patchNum, side));
+        assert.isOk(element._getOrCreateThreadAtLineRange(contentEl, patchNum,
+            commentSide, side));
 
         // Try to fetch a thread with a different range.
         range = {
@@ -249,7 +254,7 @@ limitations under the License.
         };
 
         assert.isOk(element._getOrCreateThreadAtLineRange(
-            contentEl, patchNum, side, range));
+            contentEl, patchNum, commentSide, side, range));
         // The new thread group can be fetched.
         assert.isOk(element._getThreadGroupForLine(contentEl));
 
@@ -439,12 +444,12 @@ limitations under the License.
       test('get comments and drafts', function(done) {
         var comments = {
           baseComments: [
-            {id: 'bc1'},
-            {id: 'bc2'},
+            {id: 'bc1', __commentSide: 'left'},
+            {id: 'bc2', __commentSide: 'left'},
           ],
           comments: [
-            {id: 'c1'},
-            {id: 'c2'},
+            {id: 'c1', __commentSide: 'right'},
+            {id: 'c2', __commentSide: 'right'},
           ],
         };
         var diffCommentsStub = sandbox.stub(element, '_getDiffComments',
@@ -452,12 +457,12 @@ limitations under the License.
 
         var drafts = {
           baseComments: [
-            {id: 'bd1'},
-            {id: 'bd2'},
+            {id: 'bd1', __commentSide: 'left'},
+            {id: 'bd2', __commentSide: 'left'},
           ],
           comments: [
-            {id: 'd1'},
-            {id: 'd2'},
+            {id: 'd1', __commentSide: 'right'},
+            {id: 'd2', __commentSide: 'right'},
           ],
         };
 
@@ -466,12 +471,12 @@ limitations under the License.
 
         var robotComments = {
           baseComments: [
-            {id: 'br1'},
-            {id: 'br2'},
+            {id: 'br1', __commentSide: 'left'},
+            {id: 'br2', __commentSide: 'left'},
           ],
           comments: [
-            {id: 'r1'},
-            {id: 'r2'},
+            {id: 'r1', __commentSide: 'right'},
+            {id: 'r2', __commentSide: 'right'},
           ],
         };
 
@@ -499,20 +504,20 @@ limitations under the License.
               projectConfig: {foo: 'bar'},
             },
             left: [
-              {id: 'bc1'},
-              {id: 'bc2'},
-              {id: 'bd1', __draft: true},
-              {id: 'bd2', __draft: true},
-              {id: 'br1'},
-              {id: 'br2'},
+              {id: 'bc1', __commentSide: 'left'},
+              {id: 'bc2', __commentSide: 'left'},
+              {id: 'bd1', __draft: true, __commentSide: 'left'},
+              {id: 'bd2', __draft: true, __commentSide: 'left'},
+              {id: 'br1', __commentSide: 'left'},
+              {id: 'br2', __commentSide: 'left'},
             ],
             right: [
-              {id: 'c1'},
-              {id: 'c2'},
-              {id: 'd1', __draft: true},
-              {id: 'd2', __draft: true},
-              {id: 'r1'},
-              {id: 'r2'},
+              {id: 'c1', __commentSide: 'right'},
+              {id: 'c2', __commentSide: 'right'},
+              {id: 'd1', __draft: true, __commentSide: 'right'},
+              {id: 'd2', __draft: true, __commentSide: 'right'},
+              {id: 'r1', __commentSide: 'right'},
+              {id: 'r2', __commentSide: 'right'},
             ],
           });
 
