Display action loading message at top-level
Because some actions now appear in an overflow menu, progress cannot be
indicated by setting their button label because the action may not be
visible. With this change, the action loading message is indicated in a
top-level label. Additionally, top-level actions are hidden in the same
way as menu actions.

Bug: Issue 5376
Change-Id: Iea53b18e7f3367f13b822982fba9f58a58e628db

--- a/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
@@ -46,8 +46,8 @@ limitations under the License.
       gr-button:before {
         content: attr(data-label);
       }
-      gr-button[loading]:before {
-        content: attr(data-loading-label);
+      #actionLoadingMessage {
+        color: #777;
       }
       @media screen and (max-width: 50em) {
         :host,
@@ -64,9 +64,18 @@ limitations under the License.
         .confirmDialog {
           width: 90vw;
         }
+        #actionLoadingMessage {
+          display: block;
+          margin: .5em;
+          text-align: center;
+        }
       }
     </style>
     <div>
+      <span
+          id="actionLoadingMessage"
+          hidden$="[[!_actionLoadingMessage]]">
+        [[_actionLoadingMessage]]</span>
       <gr-dropdown
           id="moreActions"
           down-arrow
@@ -83,12 +92,10 @@ limitations under the License.
             items="[[_topLevelActions]]"
             as="action">
           <gr-button title$="[[action.title]]"
-              hidden$="[[_computeActionHidden(action.__key, _hiddenActions.*)]]"
               primary$="[[action.__primary]]"
               data-action-key$="[[action.__key]]"
               data-action-type$="[[action.__type]]"
               data-label$="[[action.label]]"
-              data-loading-label$="[[_computeLoadingLabel(action.__key)]]"
               disabled$="[[!action.enabled]]"
               on-tap="_handleActionTap"></gr-button>
         </template>
