Remove hover styling from non file-row items
This makes only the file-rows have hover styling, which is correct as
they are the only actionable/clickable rows in the file-list.

Bug: Issue 5362
Change-Id: Ia147093bd63c3c7266c2e8b6adf826a8f08c6347

--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list.html
@@ -62,7 +62,7 @@ limitations under the License.
         text-align: center;
         width: 1.5em;
       }
-      .row:not(.header):hover {
+      .file-row:hover {
         background-color: #f5fafd;
       }
       .row.selected {
