Add timezones and UTC offsets to timestamps
Uses date.toString() to get the timezone of the user. Also uses moment
to get UTC offset of the user.

Feature: Issue 5344
Change-Id: I0bfb835e161ad7f14fd626c1dd678566396456cc

--- a/polygerrit-ui/app/elements/shared/gr-date-formatter/gr-date-formatter.html
+++ b/polygerrit-ui/app/elements/shared/gr-date-formatter/gr-date-formatter.html
@@ -26,8 +26,9 @@ limitations under the License.
         display: inline;
       }
     </style>
-    <span title$="[[_computeFullDateStr(dateStr, _timeFormat)]]"
-        >[[_computeDateStr(dateStr, _timeFormat, _relative)]]</span>
+    <span title$="[[_computeFullDateStr(dateStr, _timeFormat)]]">
+      [[_computeDateStr(dateStr, _timeFormat, _relative)]]
+    </span>
     <gr-rest-api-interface id="restAPI"></gr-rest-api-interface>
   </template>
   <script src="gr-date-formatter.js"></script>
