Store/retrieve unsaved drafts by range when available
Previously, drafts were only based on line number and not patch range.
This adds range to the key in localstorage so that multiple drafts can
be stored for a line range. It also prevents the wrong draft from
surfacing in the incorrect context.

This change is also important for the multi-thread changes that are
currently in development as well, because it is possible to have
separate threads for these ranges, each of which can have its own draft
saved in storage.

Bug: Issue 3548
Change-Id: Id4c1beb5d73a47a1f98b0b169091905c80f8c64a

--- a/polygerrit-ui/app/elements/shared/gr-storage/gr-storage_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-storage/gr-storage_test.html
@@ -79,6 +79,7 @@ limitations under the License.
       cleanupStorage();
     });
 
+
     test('automatically removes old drafts', function() {
       var changeNum = 1234;
       var patchNum = 5;
@@ -90,6 +91,7 @@ limitations under the License.
         path: path,
         line: line,
       };
+
       var key = element._getDraftKey(location);
 
       // Make sure that the call to cleanup doesn't get throttled.
@@ -112,6 +114,29 @@ limitations under the License.
 
       cleanupSpy.restore();
       cleanupStorage();
+    });
+
+    test('_getDraftKey', function() {
+      var changeNum = 1234;
+      var patchNum = 5;
+      var path = 'my_source_file.js';
+      var line = 123;
+      var location = {
+        changeNum: changeNum,
+        patchNum: patchNum,
+        path: path,
+        line: line,
+      };
+      var expectedResult = 'draft:1234:5:my_source_file.js:123';
+      assert.equal(element._getDraftKey(location), expectedResult);
+      location.range = {
+        start_character: 1,
+        start_line: 1,
+        end_character: 1,
+        end_line: 2,
+      };
+      expectedResult = 'draft:1234:5:my_source_file.js:123:1-1-1-2';
+      assert.equal(element._getDraftKey(location), expectedResult);
     });
   });
 </script>
